feat: 로또 번호와 당첨 번호를 비교하고 당첨 내역을 저장하는 기능 구현